--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -124,3 +124,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ActionRoguelike.ActExplosiveBarrel.ObjectMesh",NewName="/Script/ActionRoguelike.ActExplosiveBarrel.MeshComp")
