--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -126,4 +126,5 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.ActExplosiveBarrel.ObjectMesh",NewName="/Script/ActionRoguelike.ActExplosiveBarrel.MeshComp")
++PropertyRedirects=(OldName="/Script/ActionRoguelike.ActCharacter.ProjectileClass",NewName="/Script/ActionRoguelike.ActCharacter.PrimaryProjectileClass")
 
