--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,4 +127,5 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.ActExplosiveBarrel.ObjectMesh",NewName="/Script/ActionRoguelike.ActExplosiveBarrel.MeshComp")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.ActCharacter.ProjectileClass",NewName="/Script/ActionRoguelike.ActCharacter.PrimaryProjectileClass")
++ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActProjectileBase")
 
