Projectile Sound + Fixing editor bug reparenting blueprint class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,4 +128,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.ActExplosiveBarrel.ObjectMesh",NewName="/Script/ActionRoguelike.ActExplosiveBarrel.MeshComp")
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.ActCharacter.ProjectileClass",NewName="/Script/ActionRoguelike.ActCharacter.PrimaryProjectileClass")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActProjectileBase")
++ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActMagicProj")
 
