--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -129,4 +129,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ActionRoguelike.ActCharacter.ProjectileClass",NewName="/Script/ActionRoguelike.ActCharacter.PrimaryProjectileClass")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActProjectileBase")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActMagicProj")
++ClassRedirects=(OldName="/Script/ActionRoguelike.ActPoweupBase",NewName="/Script/ActionRoguelike.ActPowerupBase")
 
