Ranged Minion, AI Controller, Behavior Tree, and Blackboard

--- a/ActionRoguelike.uproject
+++ b/ActionRoguelike.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.1",
+	"EngineAssociation": "{DA2A8F18-4732-E1CE-1297-C59895EE4429}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -9,7 +9,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"AIModule"
 			]
 		}
 	],
