Sprint player action

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -131,4 +131,5 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActProjectileBase")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ActMagicProjectile",NewName="/Script/ActionRoguelike.ActMagicProj")
 +ClassRedirects=(OldName="/Script/ActionRoguelike.ActPoweupBase",NewName="/Script/ActionRoguelike.ActPowerupBase")
++ClassRedirects=(OldName="/Script/ActionRoguelike.SAction",NewName="/Script/ActionRoguelike.ActAction")
 
